# go-go-labs

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENT.md  CLAUDE.md  Makefile  README.md  changelog.md  go.mod  go.sum  test-playbook.md
.github/workflows/: codex-manuel-review.yml  go-agent-mention.yml  go-agent-review.yml  go-agent.yml  release.yml
cmd/aipl/: main.go
cmd/bandcamp/: bandcamp.go  main.go  playlist.go  tui.go
cmd/border-text/: main.go
cmd/cms/: main.go
cmd/crawler/: main.go
cmd/css-json/: main.go
cmd/css-use/: defined.go  extract-css-classes.go  find-unused.go  main.go  parse-html.go  usage.go  used.go  utils.go
cmd/feedboii/: main.go
cmd/fix-plant-json/: main.go
cmd/github-projects/: MCP_INTEGRATION.md  TODO.md  (+2 more)
doc/: how-to-create-a-web-app-with-react-rtk-vite-dagger-gen.md
docs/: charmbracelet-bubbletea-guidelines.md  how-to-convert-a-labs-program-into-a-standalone-repo.md  notification-sounds.md
friday-talks/: README.md  go.mod  go.sum
n8n/: docker-compose.yml
pkg/: multline-yaml.go
python/: .python-version  notification_sound.py  pandoc-unicode-md
python/dspy-project/: README.md  pyproject.toml
python/dspy-project/src/dspy_project/: __init__.py  module1_fundamentals.py  module2_advanced.py  module3_custom_modules.py  module3_optimization.py  module4_document_summarization.py
python/dspy-project/ttmp/2025-05-13/: 01-dspy-agents-book.md  02-dspy-agents-book.md
scripts/: cleanup-markdown-downloader.py  create-pr.sh  edit-cb.sh  example.sh  json-to-flags.sh  prompto.rb  prompto2.rb  trace_exec.bt
web/: scrape.js
(+2927 files in other folders)
